--- a/popup.html
+++ b/popup.html
@@ -12,17 +12,21 @@
 
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
+    
+    <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css">
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script> -->
+    
+    <script src="bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
-    <div class="container-fluid">
+    <!-- <div class="container-fluid">
         <table class="table">
             <thead>
                 <tr>
@@ -31,7 +35,7 @@
                 </tr>
             </thead>
             <tbody id="fillTabs">
-                <!-- <tr>
+                 <tr>
                     <td>Mark</td>
                     <td>
                         <div class="form-check">
@@ -39,7 +43,7 @@
                             <label class="form-check-label" for="exampleCheck1">add</label>
                         </div>
                     </td>
-                </tr> -->
+                </tr> 
             </tbody>
         </table>
         <div class="row mb-3">
@@ -48,6 +52,97 @@
             </div>
             <div class="col-6">
                 <input id ="saveProject" type="submit" class="btn btn-primary" value="save">
+            </div>
+        </div>
+    </div> -->
+
+
+
+
+    <div class="container-fluid" id="mydiv">
+        <div class="row text-center my-2">
+            <h1>savetabs</h1>
+        </div>
+        <div class="row">
+            <ul class="nav nav-tabs nav-justified" id="myTab" role="tablist">
+                <li class="nav-item" role="presentation">
+                    <a class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home"
+                        aria-controls="home" aria-selected="true" href="#home" roll="tab">Save</a>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <a class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile"
+                        aria-controls="profile" aria-selected="false" href="#profile" roll="tab">Open</a>
+                </li>
+            </ul>
+        </div>
+        <div class="row mx-2">
+            <div class="tab-content" id="myTabContent">
+
+                <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                    <div class="row mt-2">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Tabs</th>
+                                    <th scope="col">Action</th>
+                                </tr>
+                            </thead>
+                            <tbody id="fillTabs">
+                                <!-- <tr>
+                                    <td>Mark</td>
+                                    <td>
+                                        <div class="form-check">
+                                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                            <label class="form-check-label" for="exampleCheck1">add</label>
+                                        </div>
+                                    </td>
+                                </tr> -->
+                            </tbody>
+                        </table>
+                        <div class="row mb-3">
+                            <div class="col-6">
+                                <input type="text" class="form-control" id="projectName">
+                            </div>
+                            <div class="col-6">
+                                <input id ="saveProject" type="submit" class="btn btn-primary" value="save">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                    <div class="row mt-2">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Tabs</th>
+                                    <th scope="col">Action</th>
+                                </tr>
+                            </thead>
+                            <tbody id="openTabs">
+                                <!-- <tr>
+                                    <td>Mark</td>
+                                    <td>
+                                        <div class="form-check">
+                                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                            <label class="form-check-label" for="exampleCheck1">mark</label>
+                                        </div>
+                                    </td>
+                                </tr> -->
+                            </tbody>
+                        </table>
+
+                        <div class="row mb-3">
+                            <div class="col-6">
+                                <input id ="deleteProject" type="submit" class="btn btn-primary" value="delete">
+                            </div>
+                            <div class="col-6">
+                                <input id ="openProject" type="submit" class="btn btn-primary" value="open">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
