--- a/options.html
+++ b/options.html
@@ -2,34 +2,39 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Save Tabs Options</title>
+
+    <!-- options css -->
     <link rel="stylesheet" href="options.css">
+
+    <!-- jquery -->
     <script src="jquery-3.6.0.min.js"></script>
+
+    <!-- options javascript -->
     <script src="options.js"></script>
 
-
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css">
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+    <script src="bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
 
 <body>
 
+    <!-- heading -->
     <div class="container">
         <div class="row my-4 text-center">
             <h1>Projects</h1>
         </div>
     </div>
 
+    <!-- code for open or delete a project -->
     <div class="container my-3 card card-body">
         <h2>select and open</h2>
         <div class="row my-3">
@@ -47,11 +52,13 @@
         </div>
     </div>
 
+    <!-- show all projects -->
     <div class="container my-3 card card-body">
         <div class="row" id="fillProjects">
 
         </div>
     </div>
+    
 </body>
 
 </html>
