cleaned the code

--- a/options.html
+++ b/options.html
@@ -46,7 +46,7 @@
                 </select>
             </div>
             <div class="col-6">
-                <button id="addProject" class="btn btn-primary">open</button>
+                <button id="openProject" class="btn btn-primary">open</button>
                 <button id="deleteProject" class="btn btn-danger">delete</button>
             </div>
         </div>
@@ -58,7 +58,7 @@
 
         </div>
     </div>
-    
+
 </body>
 
 </html>
