--- a/popup.html
+++ b/popup.html
@@ -74,10 +74,10 @@
                             </tbody>
                         </table>
                         <div class="row mb-3">
-                            <div class="col-6">
+                            <div class="col-9">
                                 <input type="text" class="form-control" id="projectName">
                             </div>
-                            <div class="col-6">
+                            <div class="col-3">
                                 <input id="saveProject" type="submit" class="btn btn-primary" value="save">
                             </div>
                         </div>
@@ -110,7 +110,7 @@
                             <div class="col-6">
                                 <input id="deleteProject" type="submit" class="btn btn-danger" value="delete">
                             </div>
-                            <div class="col-6">
+                            <div class="col-6 text-center">
                                 <input id="openProject" type="submit" class="btn btn-primary" value="open">
                             </div>
                         </div>
