open in current window/new window functionality added

--- a/options.html
+++ b/options.html
@@ -45,7 +45,13 @@
                     <option value="3">Three</option>
                 </select>
             </div>
-            <div class="col-6">
+            <div class="col-2">
+                <select class="form-select" aria-label="Default select example" id="fillWindow">
+                    <option value="1">New Window</option>
+                    <option value="2">Current Window</option>
+                </select>
+            </div>
+            <div class="col-4">
                 <button id="openProject" class="btn btn-primary">open</button>
                 <button id="deleteProject" class="btn btn-danger">delete</button>
             </div>
