--- a/popup.html
+++ b/popup.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-    <div class="container-fluid" id="mydiv">
+    <div class="container-fluid">
 
         <!-- heading -->
         <div class="row text-center my-2">
@@ -73,13 +73,13 @@
                                 </tr> -->
                             </tbody>
                         </table>
-                        <div class="row mb-3">
-                            <div class="col-9">
-                                <input type="text" class="form-control" id="projectName">
-                            </div>
-                            <div class="col-3">
-                                <input id="saveProject" type="submit" class="btn btn-primary" value="save">
-                            </div>
+                    </div>
+                    <div class="row mb-3">
+                        <div class="col-9">
+                            <input type="text" class="form-control" id="projectName">
+                        </div>
+                        <div class="col-3">
+                            <input id="saveProject" type="submit" class="btn btn-primary" value="save">
                         </div>
                     </div>
                 </div>
@@ -105,16 +105,14 @@
                                 </tr> -->
                             </tbody>
                         </table>
-
-                        <div class="row mb-3">
-                            <div class="col-6">
-                                <input id="deleteProject" type="submit" class="btn btn-danger" value="delete">
-                            </div>
-                            <div class="col-6 text-center">
-                                <input id="openProject" type="submit" class="btn btn-primary" value="open">
-                            </div>
+                    </div>
+                    <div class="row mb-3">
+                        <div class="col-6">
+                            <input id="deleteProject" type="submit" class="btn btn-danger" value="delete">
                         </div>
-                        
+                        <div class="col-6">
+                            <input id="openProject" type="submit" class="btn btn-primary" value="open">
+                        </div>
                     </div>
                 </div>
 
