--- a/extension/popup.html
+++ b/extension/popup.html
@@ -31,7 +31,7 @@
 
         <!-- heading -->
         <div class="row text-center my-2">
-            <h1>savetabs</h1>
+            <h1>Save Tabs</h1>
         </div>
 
         <!-- tabs -->
