--- a/extension/options.html
+++ b/extension/options.html
@@ -40,9 +40,7 @@
         <div class="row my-3">
             <div class="col-6">
                 <select class="form-select" aria-label="Default select example" id="fillProjectsName">
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
+                    <option value="-1">No project Found</option>
                 </select>
             </div>
             <div class="col-2">
