changed tabs id  in popup.html and options.html

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -38,12 +38,12 @@
         <div class="row">
             <ul class="nav nav-tabs nav-justified" id="myTab" role="tablist">
                 <li class="nav-item" role="presentation">
-                    <a class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home"
-                        aria-controls="home" aria-selected="true" href="#home" roll="tab">Save</a>
+                    <a class="nav-link active" id="savepage-tab" data-bs-toggle="tab" data-bs-target="#savepage"
+                        aria-controls="savepage" aria-selected="true" href="#savepage" roll="tab">Save</a>
                 </li>
                 <li class="nav-item" role="presentation">
-                    <a class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile"
-                        aria-controls="profile" aria-selected="false" href="#profile" roll="tab">Open</a>
+                    <a class="nav-link" id="openpage-tab" data-bs-toggle="tab" data-bs-target="#openpage"
+                        aria-controls="openpage" aria-selected="false" href="#openpage" roll="tab">Open</a>
                 </li>
             </ul>
         </div>
@@ -52,7 +52,7 @@
         <div class="row mx-2">
             <div class="tab-content" id="myTabContent">
 
-                <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                <div class="tab-pane fade show active" id="savepage" role="tabpanel" aria-labelledby="savepage-tab">
                     <div class="row mt-2">
                         <table class="table">
                             <thead>
@@ -84,7 +84,7 @@
                     </div>
                 </div>
 
-                <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                <div class="tab-pane fade" id="openpage" role="tabpanel" aria-labelledby="openpage-tab">
                     <div class="row mt-2">
                         <table class="table">
                             <thead>
