help page added

--- a/extension/options.html
+++ b/extension/options.html
@@ -29,8 +29,16 @@
 
     <!-- heading -->
     <div class="container">
-        <div class="row my-4 text-center">
-            <h1>Projects</h1>
+        <div class="row my-4">
+            <div class="col-md-4 position-relative">
+                <input class="position-absolute top-50 start-0 translate-middle-y" id="upload" type=file accept="text/json" name="files[]" size=30>
+            </div>
+            <div class="col-md-4 text-center">
+                <h1>Projects</h1>
+            </div>
+            <div class="col-md-4">
+                <a href="help.html"><img class="submit-buttons" src="icons/help.png" height="50" width="50" alt="help"></a>
+            </div>
         </div>
     </div>
 
@@ -54,27 +62,35 @@
                 <button id="deleteProject" class="btn btn-danger">delete</button>
             </div>
         </div>
-        <div class="row">
-            <div class="col-6">
-                <input id="upload" type=file   accept="text/json" name="files[]" size=30>
-            </div>
-            <div class="col-6">
-                <button type="button" id="importData" class="btn btn-secondary">Import</button>
-            </div>
-        </div>
     </div>
 
-    <!-- show all projects -->
+    <!-- projects body -->
     <div class="container my-3 card card-body">
+
+        <!-- import projects -->
+        <div class="container" id="importBox">
+            <div class="row alert alert-warning" role="alert">
+                <div class="col-9">
+                    Note: if you have downloaded your projects data before, you can import that, from here
+                </div>
+                <div class="col-3">
+                    <button type="button" id="importData" class="btn btn-secondary submit-buttons">Import</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- show all projects -->
         <div class="row" id="fillProjects">
 
         </div>
+
     </div>
 
-    <div class="container">
+    <div class="container" id="exportWarning">
         <div class="row alert alert-warning" role="alert">
             <div class="col-9">
-                Note: before removing this extension, if you want you can download, your data in json format, by clicking on Export button
+                Note: before removing this extension, if you want you can download, your data in json format, by
+                clicking on Export button
             </div>
             <div class="col-3">
                 <button type="button" id="exportData" class="btn btn-secondary submit-buttons">Export</button>
