--- a/extension/help.html
+++ b/extension/help.html
@@ -77,7 +77,7 @@
                             button</h6>
                     </div>
                     <div class="row mt-2">
-                        <img src="screenshots/popup_save_project.jpeg" alt="">
+                        <img src="screenshots/save.jpeg" alt="save">
                     </div>
                 </div>
                 <!-- open project tab content -->
@@ -87,23 +87,7 @@
                         <h6>1. open popup page, select the projects you want to open, and click on open button</h6>
                     </div>
                     <div class="row mt-2">
-                        <img src="screenshots/popup_open_projects.jpeg" alt="">
-                    </div>
-
-                    <div class="row mt-2">
-                        <h6>2. open options page, select the project you want to open, select the browser window (new or
-                            current) and click on open button</h6>
-                    </div>
-                    <div class="row mt-2">
-                        <img src="screenshots/options_open_project.jpeg" alt="">
-                    </div>
-
-                    <div class="row mt-2">
-                        <h6>3. open options page, choose tabs you want to open, available in every project container and
-                            click on open button</h6>
-                    </div>
-                    <div class="row mt-2">
-                        <img src="screenshots/options_page_open_project_tabs.jpeg" alt="">
+                        <img src="screenshots/open.jpeg" alt="">
                     </div>
 
                 </div>
@@ -114,15 +98,9 @@
                         <h6>1. open popup page, select the projects you want to delete, and click on delete button</h6>
                     </div>
                     <div class="row mt-2">
-                        <img src="screenshots/popup_delete_projects.jpeg" alt="">
+                        <img src="screenshots/delete.jpeg" alt="">
                     </div>
 
-                    <div class="row mt-2">
-                        <h6>2. open options page, select the project you want to delete, and click on delete button</h6>
-                    </div>
-                    <div class="row mt-2">
-                        <img src="screenshots/options_delete_project.jpeg" alt="">
-                    </div>
                 </div>
                 <!-- import data tab content -->
                 <div class="tab-pane fade" id="importdata" role="tabpanel" aria-labelledby="importdata-tab">
@@ -131,7 +109,7 @@
                             json data file</h6>
                     </div>
                     <div class="row mt-2">
-                        <img src="screenshots/options_page_import_data.jpeg" alt="">
+                        <img src="screenshots/import.jpeg" alt="">
                     </div>
                 </div>
                 <!-- export data tab content -->
@@ -141,7 +119,7 @@
                             file with name savetabs.json</h6>
                     </div>
                     <div class="row mt-2">
-                        <img src="screenshots/options_page_export_data.jpeg" alt="">
+                        <img src="screenshots/export.jpeg" alt="">
                     </div>
                 </div>
 
