--- a/extension/help.html
+++ b/extension/help.html
@@ -65,7 +65,7 @@
     </div>
 
     <!-- projects body -->
-    <div class="container my-3 card card-body">
+    <div class="container card card-body">
         <!-- tabs data -->
         <div class="row mx-2">
             <div class="tab-content" id="myTabContent">
