--- a/extension/options.html
+++ b/extension/options.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Save Tabs Options</title>
+    <title>SaveTabs - options</title>
 
     <!-- options css -->
     <link rel="stylesheet" href="options.css">
@@ -34,7 +34,7 @@
                 <input class="position-absolute top-50 start-0 translate-middle-y" id="upload" type=file accept="text/json" name="files[]" size=30>
             </div>
             <div class="col-md-4 text-center">
-                <h1>Projects</h1>
+                <h1>SaveTabs</h1>
             </div>
             <div class="col-md-4">
                 <a href="help.html"><img class="submit-buttons" src="icons/help.png" height="50" width="50" alt="help"></a>
