--- a/extension/pages/help.html
+++ b/extension/pages/help.html
@@ -9,13 +9,13 @@
     <title>SaveTabs - help</title>
 
     <!-- options css -->
-    <link rel="stylesheet" href="help.css">
+    <link rel="stylesheet" href="../css/help.css">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../bootstrap-5.1.3-dist/css/bootstrap.min.css">
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
 
@@ -77,7 +77,7 @@
                             button</h6>
                     </div>
                     <div class="row mt-2">
-                        <img src="screenshots/save.jpeg" alt="save">
+                        <img src="../screenshots/save.jpeg" alt="save">
                     </div>
                 </div>
                 <!-- open project tab content -->
@@ -87,7 +87,7 @@
                         <h6>1. open popup page, select the projects you want to open, and click on open button</h6>
                     </div>
                     <div class="row mt-2">
-                        <img src="screenshots/open.jpeg" alt="">
+                        <img src="../screenshots/open.jpeg" alt="">
                     </div>
 
                 </div>
@@ -98,7 +98,7 @@
                         <h6>1. open popup page, select the projects you want to delete, and click on delete button</h6>
                     </div>
                     <div class="row mt-2">
-                        <img src="screenshots/delete.jpeg" alt="">
+                        <img src="../screenshots/delete.jpeg" alt="">
                     </div>
 
                 </div>
@@ -109,7 +109,7 @@
                             json data file</h6>
                     </div>
                     <div class="row mt-2">
-                        <img src="screenshots/import.jpeg" alt="">
+                        <img src="../screenshots/import.jpeg" alt="">
                     </div>
                 </div>
                 <!-- export data tab content -->
@@ -119,7 +119,7 @@
                             file with name savetabs.json</h6>
                     </div>
                     <div class="row mt-2">
-                        <img src="screenshots/export.jpeg" alt="">
+                        <img src="../screenshots/export.jpeg" alt="">
                     </div>
                 </div>
 
