--- a/extension/pages/options.html
+++ b/extension/pages/options.html
@@ -9,19 +9,19 @@
     <title>SaveTabs - options</title>
 
     <!-- options css -->
-    <link rel="stylesheet" href="options.css">
+    <link rel="stylesheet" href="../css/options.css">
 
     <!-- jquery -->
-    <script src="jquery-3.6.0.min.js"></script>
+    <script src="../js/jquery-3.6.0.min.js"></script>
 
     <!-- options javascript -->
-    <script src="options.js"></script>
+    <script src="../js/options.js"></script>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../bootstrap-5.1.3-dist/css/bootstrap.min.css">
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
 
@@ -37,7 +37,7 @@
                 <h1>SaveTabs</h1>
             </div>
             <div class="col-md-4">
-                <a href="help.html"><img class="submit-buttons" src="icons/help.png" height="50" width="50" alt="help"></a>
+                <a href="help.html"><img class="submit-buttons" src="../icons/help.png" height="50" width="50" alt="help"></a>
             </div>
         </div>
     </div>
