--- a/extension/pages/popup.html
+++ b/extension/pages/popup.html
@@ -9,20 +9,20 @@
     <title>SaveTabs</title>
 
     <!-- popup css -->
-    <link rel="stylesheet" href="popup.css">
+    <link rel="stylesheet" href="../css/popup.css">
 
     <!-- jquery -->
-    <script src="jquery-3.6.0.min.js"></script>
+    <script src="../js/jquery-3.6.0.min.js"></script>
 
     <!-- popup javascript -->
-    <script src="popup.js"></script>
+    <script src="../js/popup.js"></script>
 
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../bootstrap-5.1.3-dist/css/bootstrap.min.css">
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
 
